08Nov00=======================================================================
1. fix cosmetic errors in for/oper for 'users'.
07Nov00=======================================================================
1. removed sh/call because the owner isn't happy about us using it. 
2. change sh/qrz to the new interface. MUCH QUICKER! you will need a user id
and password from qrz.com to use it and you will have to copy the 
/spider/perl/Internet.pm to /spider/local and alter it accordingly. Do 
remember to set $allow=1 as well! The new interface comes courtesy of Fred
LLoyd, the proprietor of http://www.qrz.com
06Nov00=======================================================================
1. Added sh/qrz to the list of callbook services
05Nov00=======================================================================
1. 75% speed up on sh/dx !, lower memory usage as well!
2. Fixed problem with clear/spot 0 (how did this one last so long!!!)
3. add 'on' in accept/reject spots as synonym for 'freq'
4. add the same speed up to general log printing
5. fixed help \ 
04Nov00=======================================================================
1. fix sh/filter so ity now works for any callsign (and not just connected
ones).
2. Have only one is_callsign and not an iscallsign as well.
3. Add set/hops and show/hops commands.
4. Add unset/badnode command and put some help in for these commands
03Nov00=======================================================================
1. allow - in filter strings
2. store only the filter expression NOTE BENE: you will need to clear all 
your existing filters and re-enter them!!!!!!
3. Added announce filtering
4. Fixed problem with announce filtering on output to the node
02Nov00=======================================================================
1. updated filtering logic. You will need to RECREATE your filters (clear/spot
all, then start again) for testing.
2. allow PC73 for DXNet