@@ -1,3 +1,5 @@
+12Nov00=======================================================================
+1. Fix lack 't' action in Filter.pm
 08Nov00=======================================================================
 1. fix cosmetic errors in for/oper for 'users'.
 07Nov00=======================================================================
